feat(grpc): added partial update to the db using grpc
