# gapi/rpc_update_user.go
@@ -1,0 +1,94 @@
+package gapi
+
+import (
+	"context"
+	"database/sql"
+	"time"
+
+	"github.com/jackc/pgx/v5/pgtype"
+	db "github.com/projects/go/01_simple_bank/db/sqlc"
+	"github.com/projects/go/01_simple_bank/pb"
+	"github.com/projects/go/01_simple_bank/util"
+	"github.com/projects/go/01_simple_bank/validation"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) UpdateUser(ctx context.Context, req *pb.UpdateUserRequest) (*pb.UpdateUserResponse, error) {
+	violations := validateUpdateUserRequest(req)
+
+	if violations != nil {
+		return nil, invalidArgumentError(violations)
+	}
+
+	arg := db.UpdateUserParams{
+		Username: req.GetUsername(),
+		FullName: pgtype.Text{
+			String: req.GetFullName(),
+			Valid:  req.FullName != nil,
+		},
+		Email: pgtype.Text{
+			String: req.GetEmail(),
+			Valid:  req.Email != nil,
+		},
+	}
+
+	if req.Password != nil {
+		hashedPassword, err := util.HashPassword(req.GetPassword())
+
+		if err != nil {
+			return nil, status.Errorf(codes.Internal, "failed to hash password: %s", err)
+		}
+
+		arg.HashedPassword = pgtype.Text{
+			String: hashedPassword,
+			Valid:  true,
+		}
+
+		arg.PasswordChangedAt = pgtype.Timestamptz{
+			Time:  time.Now(),
+			Valid: true,
+		}
+	}
+
+	user, err := server.store.UpdateUser(ctx, arg)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			return nil, status.Errorf(codes.NotFound, "username not found: %s", err)
+		}
+		return nil, status.Errorf(codes.Internal, "failed to update user: %s", err)
+	}
+
+	rsp := &pb.UpdateUserResponse{
+		User: convertUser(user),
+	}
+
+	return rsp, nil
+}
+
+func validateUpdateUserRequest(req *pb.UpdateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := validation.ValidateUsername(req.GetUsername()); err != nil {
+		violations = append(violations, fieldViolations("username", err))
+	}
+
+	if req.Password != nil {
+		if err := validation.ValidatePassword(req.GetPassword()); err != nil {
+			violations = append(violations, fieldViolations("password", err))
+		}
+	}
+
+	if req.FullName != nil {
+		if err := validation.ValidateFullname(req.GetFullName()); err != nil {
+			violations = append(violations, fieldViolations("full_name", err))
+		}
+	}
+
+	if req.Email != nil {
+		if err := validation.ValidateEmail(req.GetEmail()); err != nil {
+			violations = append(violations, fieldViolations("email", err))
+		}
+	}
+
+	return violations
+}
